6610. Fix on close button not showing in Firefox

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -546,7 +546,7 @@
             height: 10px;
             margin-left: -3px;
             margin-top: 2px;
-            padding-right: 0;
+            padding-right: -1px;
             right: -1px;
             top: 1px;
             z-index: 10;
@@ -912,6 +912,11 @@ html.is-firefox {
         .icon-info,
         .icon-alert {
           top: 12px;
+        }
+
+        &.dismissible .icon.close {
+          padding-right: 0;
+          right: 0;
         }
       }
     }
